--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "nodemon api/index.js",
-    "build": "npm install &&  npm install --prefix client && npm run build --prefix client"
+    "build": "npm install &&  npm install --prefix client && npm run build --prefix client",
+    "preinstall": "node preinstall.js"
   },
   "keywords": [],
   "author": "",
