--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2",
